--- a/index.html
+++ b/index.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yusuf Ulusoy</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: 'Prompt', sans-serif;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    .N {
+      font-size: 3.75rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      border: .75rem solid #fff;
+      border-bottom: 0;
+      padding: 5px;
+    }
+
+    .Y {
+      font-size: 5rem;
+      line-height: 4rem;
+    }
+
+    .U {
+      font-size: 4.25rem;
+      line-height: 3.75rem;
+      margin-bottom: 10px;
+    }
+
+    .T {
+      font-size: 1.5rem;
+      font-weight: 200;
+      background: #ffff;
+      color: #000;
+      margin: -5px;
+      line-height: 2.5rem;
+    }
+
+    @media only screen and (min-width: 600px) {
+      .N {
+        font-size: 3.75rem;
+        border-width: 1.5rem;
+      }
+
+      .Y {
+        font-size: 10rem;
+        line-height: 8rem;
+      }
+
+      .U {
+        font-size: 8.25rem;
+        line-height: 6rem;
+      }
+
+      .T {
+        font-size: 2.5rem;
+        line-height: 4.5rem;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="N">
+    <div class="Y">YUSUF</div>
+    <div class="U">ULUSOY</div>
+    <div class="T">
+      SOFTWARE DEVELOPER
+    </div>
+  </div>
 </body>
+
 </html>
